# DSControl

./: .gitignore  OVERVIEW.md  README.md  driverstation.bat  driverstation.sh  pyproject.toml  settings.json
dscontrol/: __init__.py  protocol.py
dscontrol/client/: __init__.py  app.py  cli.py  gui.py  stream.py
dscontrol/server/: __init__.py  app.py  cli.py  control_interface.py  fms.py  pipeline_utils.py  remote_window.py  stream_server.py  win_utils.py
dscontrol/server/calibration/: __init__.py  calibration_storage.py  cli.py
