[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dscontrol"
version = "0.1.0"
description = "FRC Remote Driver Station Control System"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "DSControl Contributors"}]
dependencies = []

[project.optional-dependencies]
server-control = ["pydirectinput-rgx"]
gui-control = ["flet[all]>=0.28.3", "pynput>=1.7.6"]

[project.scripts]
dscontrol-server = "dscontrol.server.cli:main"
dscontrol-cli = "dscontrol.client.cli:main"
dscontrol-gui = "dscontrol.client.gui:main"
