[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dscontrol"
version = "0.1.0"
description = "FRC Remote Driver Station Control System"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "AdarWa" },
    { name = "rakrakon" }
]
dependencies = [
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
]
[project.optional-dependencies]
server-control = ["pydirectinput-rgx"]
gui-control = ["flet[all]>=0.28.3", "pynput>=1.7.6", "flet-video==0.2.0.dev504"]

[project.scripts]
dscontrol-server = "dscontrol.server.cli:main"
dscontrol-cli = "dscontrol.client.cli:main"
dscontrol-gui = "dscontrol.client.gui:main"
