[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dscontrol"
version = "0.1.0"
description = "FRC Remote Driver Station Control System"
readme = "README.md"
requires-python = ">=3.10, <=3.12"
authors = [
    { name = "AdarWa" },
    { name = "rakrakon" }
]
dependencies = []
[project.optional-dependencies]
server-control = ["pydirectinput-rgx", "opencv-python", "easyocr","pywin32","rapidfuzz"]
gui-control = ["flet[all]", "pynput>=1.7.6","requests","pillow"]

[project.scripts]
dscontrol-server = "dscontrol.server.cli:main"
dscontrol-cli = "dscontrol.client.cli:main"
dscontrol-gui = "dscontrol.client.gui:main"
dscontrol-calibrate = "dscontrol.server.calibration:main"
